resources/loadbalancer.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-svc
spec:
  type: LoadBalancer
  selector:
    app: argocd-server
  ports:
  - name: http
    targetPort: 80
    protocol: TCP
    nodePort: 32080
