resources/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
spec:
  rules:
    - host: zkWallet-prd.walletzk.app
      http:
        paths:
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 3000
          - path: /kibana
            pathType: Prefix
            backend:
              service:
                name: kibana-server
                port:
                  number: 80
          - path: /elastic
            pathType: Prefix
            backend:
              service:
                name: elasticsearch-master-headless
                port:
                  number: 9200
          - path: /tea
            pathType: Prefix
            backend:
              service:
                name: tea-svc
                port:
                  number: 80
          - path: /coffee
            pathType: Prefix
            backend:
              service:
                name: coffee-svc
                port:
                  number: 80
  tls:
    - hosts:
      - zkWallet-prd.walletzk.app
      secretName: argocd-cert-manager-cb-tls
