resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zkwallet-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: letsencrypt-prd
spec:
  rules:
  - host: zkwallet-prd.walletzk.app
    http:
      paths:
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
      - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 3000
      - path: /kibana
        pathType: Prefix
        backend:
          service:
            name: kibana-server
            port:
              number: 80
      - path: /elastic
            pathType: Prefix
            backend:
              service:
                name: elasticsearch-master-headless
                port:
                  number: 9200
      - path: /tea
            pathType: Prefix
            backend:
              service:
                name: tea-svc
                port:
                  number: 80
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: coffee-svc
            port:
              number: 80
  tls:
    - hosts:
      - zkwallet-prd.walletzk.app
      secretName: zkwallet-cert-manager-cb-tls
